<resources>
    <string name="app_name">TaskManager</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login_button">Login</string>


    <!-- Strings related to create task -->
    <string name="title_create_task_activity">Añadir tarea</string>
    <string name="prompt_description">Descripción</string>
    <string name="prompt_duration">Duración en minutos</string>
    <string name="create_task_button">Crear tarea</string>
    <string name="successfull_created_task">La tarea ha sido creada y asignada</string>

    <!-- Strings related to task list -->
    <string name="title_task_list_activity">Mis tareas</string>

    <!-- Strings related to fruit list -->
    <string name="title_fruit_list_activity">Mis frutas</string>

</resources>
